--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,7 +9,8 @@
     android:layout_height="wrap_content" 
     android:text="Enter Integers Only!"
     android:gravity="center"
-    android:textSize="12sp"
+    android:textSize="16sp"
+	android:textColor="#ff000000"
     />
 <LinearLayout 
     android:orientation="horizontal"
@@ -34,6 +35,7 @@
 		android:id="@+id/TextView01" 
 		android:lines="20"
 		android:layout_width="match_parent" 
-		android:layout_height="match_parent">
-		</TextView>
+		android:layout_height="match_parent"
+		android:textColor="#ff000000"/>
+
 </LinearLayout>
