--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -36,6 +36,7 @@
 		android:lines="20"
 		android:layout_width="match_parent" 
 		android:layout_height="match_parent"
+	android:textSize="20sp"
 		android:textColor="#ff000000"/>
 
 </LinearLayout>
